<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral50"
    tools:context=".ToastFragment">

    <TextView
        android:id="@+id/txtTituloToast"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:background="@color/material_dynamic_primary40"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/estilo_de_botones"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnGreen"
        android:layout_width="380dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/green"
        android:text="@string/btnGreen"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloToast"
        app:layout_constraintVertical_bias="0.602" />

    <Button
        android:id="@+id/btnRed"
        android:layout_width="380dp"
        android:layout_height="62dp"
        android:layout_marginBottom="484dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/btnRed"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="380dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/material_dynamic_primary30"
        android:text="@string/volver_al_men_principal"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRed" />
</androidx.constraintlayout.widget.ConstraintLayout>