<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral50"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/material_dynamic_primary30"
        android:text="@string/cerrar_actividad"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="415dp"
        android:layout_height="55dp"
        android:background="@color/material_dynamic_primary40"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/men_principal"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnConversor"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/material_dynamic_primary30"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/conversor_de_divisas"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toTopOf="@+id/btnToast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <Button
        android:id="@+id/btnToast"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/material_dynamic_primary30"
        android:text="@string/toast"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>